--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,7 @@ services:
       MYSQL_PASSWORD: root
       MYSQL_DB: devops
     depends_on:
-      mysql:
-      condition: service_healthy
+      - mysql
     networks:
       - twotier
     restart: always
